fix cover not working on mobile browser, fix social links spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,20 @@
 	padding: 0;
 	margin: 0;
 }
+html {
+	height: 100%;
+	min-height: 100%;
+}
 body {
 	margin: 0;
 	padding: 0;
 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
+	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size: cover;
 	background-color: #464646;
-	font-family: Courier New, Courier, monospace
+	font-family: Courier New, Courier, monospace;
 }
 .blurr {
 	position: fixed;
@@ -80,7 +84,7 @@ footer {
 }
 @media screen and (max-width: 640px), screen and (max-height: 580px) {
 	.social-links {
-		margin-top: 10%;
+		margin: 10% 0 0 0;
 		text-align: center;
 	}
 	.social-item {
@@ -95,5 +99,14 @@ footer {
 	}
 	.subtitle {
 		font-size: 1em;
+	}
+	.social-item:first-child {
+		margin-bottom: 10px;
+	}
+	.social-item + .social-item {
+		margin-left: 10px;
+	}
+	footer {
+		margin-bottom: 10px;
 	}
 }
